# ccl

./: ccl.code-workspace
caracal/: LICENCE  README.md  project.json  pyproject.toml  setup.py.bak
caracal-test/: .gitignore  project.sb3
caracal-test/sprites/cat/: cat.ccl.py
caracal-test/sprites/stage/: stage.ccl.py
caracal/src/caracal/compiler/: ast_mod.py  build.py  gen_id.py  linker.py  run_sprite.py
caracal/src/caracal/core/: block.py  costume.py  registry.py  sprite.py
caracal/src/caracal/util/: de_camel_case.py  gen_id.py  random.py  random_function.py  random_str.py
caracal/src/ccl.egg-info/: PKG-INFO  SOURCES.txt
caracal/src/scratchsr/compiler/: ast_mod.py  build.py  run_sprite.py
scratchsr/: main.py  pyproject.toml
scratchsr-test/: .gitignore  project.sb3  pyproject.toml
scratchsr-test/project/: project.json
scratchsr-test/sprites/cat/: cat.ccl.py
scratchsr-test/sprites/stage/: stage.ccl.py
scratchsr/scratchsr/blocks/: looks.py  motion.py
scratchsr/scratchsr/blocks/events/: on_flag_clicked.py
scratchsr/scratchsr/compiler/: ast_mod.py  build.py  run_sprite.py
scratchsr/scratchsr/compiler/blocks/: build_blocks.py  linker.py
scratchsr/scratchsr/compiler/costumes/: build_costumes.py  get_asset_path.py  iterate_costumes.py
scratchsr/scratchsr/compiler/packaging/: bundle.py  bundle_sprite.py  package.py
scratchsr/scratchsr/errors/: scratch_error.py
scratchsr/scratchsr/user/: create_block.py  essential.py  find_costume.py  register_sprite.py
scratchsr/scratchsr/util/: find_event.py  gen_id.py
(+22 files in other folders)
