[tool.poetry]
name = "scratchsr"
version = "0.1.0"
description = "A Python framework for writing big Scratch programs"
authors = ["Olivier Audet-Yang <66892647+greentext01@users.noreply.github.com>"]
license = "MIT"
classifiers = [
  "Development Status :: 1 - Planning",
  "Topic :: Software Development :: Compilers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries",
]
keywords = ["scratch", "compiler", "framework", "library"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scsr = "scratchsr.compiler.build:build"
